# rust-auth

./: .env  Cargo.toml  docker-compose.yml
migrations/: 20200915202350_create-tables.sql
src/: main.rs  mod.rs
src/config/: crypto.rs  mod.rs
src/db/: mod.rs  user.rs
src/handlers/: mod.rs  user.rs
src/models/: user.rs
