[package]
name = "auth-service"
version = "0.1.0"
authors = ["Rodolfo Ruiz <rpruiz@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.1"
actix-rt = "1.1.1"
config = "0.10.1"
dotenv = "0.15.0"
serde = { version = "1.0.116", features = ["derive"] }
eyre = "0.6.0"
color-eyre = "0.5.2"
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-log = { version = "0.1.1", features = ["env_logger"] }
tracing-subscriber = "0.2.12"
